# waiterbot

./: README.md
waiterbot/: map1.pgm
waiterbot/waiterbot/: CHANGELOG.rst  CMakeLists.txt  package.xml
waiterbot/waiterbot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
waiterbot/waiterbot_bringup/launch/: waiterbot_core.launch  waiterbot_lidar.launch  waiterbot_remote.launch  waiterbot_robot.launch
waiterbot/waiterbot_bringup/launch/includes/: description.launch.xml
waiterbot/waiterbot_bringup/scripts/: create_udev_rules
waiterbot/waiterbot_bringup/src/: waiterbot_diagnostics.cpp
waiterbot/waiterbot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
waiterbot/waiterbot_description/urdf/: waiterbot_waiter.gazebo.xacro  waiterbot_waiter.urdf.xacro
waiterbot/waiterbot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
waiterbot/waiterbot_gazebo/include/waiterbot_gazebo/: waiterbot_drive.h
waiterbot/waiterbot_gazebo/launch/: waiterbot_empty_world.launch  waiterbot_gazebo_rviz.launch  waiterbot_simulation.launch  waiterbot_world.launch
waiterbot/waiterbot_gazebo/models/waiterbot_plaza/: model.config  model.sdf
waiterbot/waiterbot_gazebo/models/waiterbot_waiter/: model-1_4.sdf  model.config  model.sdf
waiterbot/waiterbot_gazebo/scripts/: gui.py
waiterbot/waiterbot_gazebo/src/: waiterbot_drive.cpp
waiterbot/waiterbot_gazebo/worlds/: waiterbot_world.world
waiterbot/waiterbot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
waiterbot/waiterbot_navigation/launch/: move_base.launch  waiterbot_navigation.launch
waiterbot/waiterbot_navigation/param/: dwa_local_planner_params_waiter.yaml
waiterbot/waiterbot_slam/: CHANGELOG.rst  CMakeLists.txt  package.xml
waiterbot/waiterbot_slam/bag/: bag_files.md
waiterbot/waiterbot_slam/launch/: waiterbot_gmapping.launch  waiterbot_slam.launch
waiterbot/waiterbot_slam/src/: flat_world_imu_node.cpp
