<?xml version="1.0"?>
<package format="2">
  <name>waiterbot</name>
  <version>1.2.6</version>
  <description>
    ROS packages for the waiterbot (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="chc@robotis.com">HanCheol Cho</author>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/waiterbot</url>
  <url type="emanual">http://waiterbot.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/waiterbot</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/waiterbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>waiterbot_bringup</exec_depend>
  <exec_depend>waiterbot_description</exec_depend>
  <exec_depend>waiterbot_example</exec_depend>
  <exec_depend>waiterbot_navigation</exec_depend>
  <exec_depend>waiterbot_slam</exec_depend>
  <exec_depend>waiterbot_teleop</exec_depend>
  <export><metapackage/></export>
</package>
