<?xml version="1.0"?>
<package format="2">
  <name>waiterbot_description</name>
  <version>1.2.6</version>
  <description>
    3D models of the waiterbot for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/waiterbot_description</url>
  <url type="emanual">http://waiterbot.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/waiterbot</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/waiterbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
