<?xml version="1.0"?>
<package format="2">
  <name>waiterbot_navigation</name>
  <version>1.2.6</version>
  <description>
    The waiterbot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/waiterbot_navigation</url>
  <url type="emanual">http://waiterbot.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/waiterbot</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/waiterbot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>waiterbot_bringup</exec_depend>
</package>
